# alexw_config

./: .bash_aliases  .bashrc  .emacs  .gitconfig  .gitignore  .tmux.conf  Makefile.am  configure.ac  install.sh
.alex_bin/: Makefile.am  backdoor.c  configure.ac  locktty
.alex_bin/lib/: alog.c
.emacs.d/: fill-column-indicator.el  mo-git-blame.el
.emacs.d/lisp/: simple-call-tree+.el  simple-call-tree.el
lib/: alog.h  automake.mk
m4/: .gitignore
utilities/: .gitignore  automake.mk  backdoor.c  bundle
