dnl Process this file with autoconf to produce a configure script.
AC_PREREQ(2.63)
AC_INIT(alexw_config, 0.1.90, alexw@xiabibi.net)
AC_CONFIG_AUX_DIR([build-aux])
AM_INIT_AUTOMAKE([foreign subdir-objects -Wall -Werror])
AC_CONFIG_MACRO_DIR([m4])

AC_PROG_CC
AM_PROG_AR

LT_INIT([disable-shared])

AC_CONFIG_HEADERS([config.h])
AC_CONFIG_FILES([Makefile])
AC_OUTPUT
